# OCR-credit-card-Line-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  receipt_bot_architecture.mermaid
.github/workflows/: deploy.yml
app/: buttons.py  errors.py  gcs.py  handlers.py  image_store.py  logging_setup.py  payload.py  reply.py  schema.py  store.py  store_gcs.py  tasks.py
app/ocr/: base.py  claude.py  factory.py  gemini.py  typhoon.py  typhoon_gemini.py
docs/: abnormal_photo_scenarios.md  logging.md  ocr_model_comparison.md  problems_and_fixes.md
infra/: apis.tf  artifact_registry.tf  cloud_run.tf  cloud_tasks.tf  imports.tf  monitoring.tf  outputs.tf  providers.tf  secrets.tf  service_accounts.tf  storage.tf  terraform.tfvars.example  variables.tf  wif.tf
misc/: receipt_bot_architecture.mermaid
scripts/: check_env.sh  compare_models.py  ocr_smoke.py  replay_webhook.py  smoke_storage.py  trace_receipt.py
services/: webhook_main.py  worker_main.py
tests/: test_buttons.py  test_compare_models.py  test_errors.py  test_gcs.py  test_handlers.py  test_image_store.py  test_logging_setup.py  test_ocr_base.py  test_ocr_claude.py  test_ocr_factory.py  test_ocr_gemini.py  test_ocr_typhoon.py  test_ocr_typhoon_gemini.py  test_payload.py  test_reply.py  test_schema.py  test_store.py  test_tasks.py  test_webhook_main.py  test_worker_main.py
tests/fixtures/: cancel_postback.json  card_postback.json  category_postback.json  duplicate_image_message.json  image_message.json  process_anyway_postback.json  skip_postback.json  typed_details_text.json
